--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,3 +4,9 @@
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 // @import 'font-awesome';
 @import 'box-sizing';
+
+
+
+body {
+  background: #ff0;
+}
