--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,9 +4,4 @@
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 // @import 'font-awesome';
 @import 'box-sizing';
-
-
-
-body {
-  background: #f00;
-}
+@import 'reset';
