--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,61 +6,74 @@
 $c-banner: #2fa7b8;
 $c-nav: #103d88;
 $c-white: #fff;
-
-
 @import 'box-sizing';
 @import 'reset';
 
-
+.hero {
+  padding: 2rem;
+}
 
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2rem;
 }
-
-
 
 .hero-pic {
   background: $c-banner;
   background-repeat: no-repeat;
 }
 
-
 .logo-pic {
   max-width: 3rem;
+
 }
 
 .name {
- display: inline-block;
+  justify-content: center;
+  padding: 1rem;
+  background: $c-white;
+
 }
 
-.left-nav {
+.nav__left {
+  display: flex;
+  align-items: center;
   justify-content: center;
   color: $c-nav;
 }
 
+.nav__right {
+  justify-content: center;
+}
+
+.navbar__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .list-item {
   display: flex;
-  flex-direction: row;
+  background: $c-white;
   color: $c-nav;
   text-decoration: none;
+  margin: 1rem;
 }
 
 .title {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  min-height: 40vh;
+  padding: 4rem;
+  text-align: center;
 }
 
-.top-title {
+.title__top {
   color: $c-white;
   font-size: 4rem;
   text-transform: (50%);
 }
 
-.bottom-title {
- color: $c-nav;
+.title__bottom {
+  color: $c-nav;
 }
