more right side

--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -9,6 +9,7 @@ ul {
 }
 
 img {
+  align-self: center;
   max-width: 100%;
-  align-self: center; /*this makes it so it won't stretch the height when it's in a flexbox*/
+
 }
