--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -96,12 +96,12 @@ $c-jamaica2: #95c762;
 .grid__left {
   flex-grow: 1.5;
   padding: 1rem;
-  border: 0.5rem $c-banner solid;
+  // border: 0.5rem $c-banner solid;//
 }
 
 .headline__title {
   color: $c-nav;
-  font-size: 40px;
+  font-size: 3rem;
   text-transform: uppercase;
 }
 
@@ -162,7 +162,7 @@ $c-jamaica2: #95c762;
 .grid__right {
   flex-grow: 1;
   padding: 1rem;
-  border: 0.5rem $c-banner solid;
+  //  border: 0.5rem $c-banner solid;//
 }
 
 .social {
@@ -170,7 +170,6 @@ $c-jamaica2: #95c762;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: $c-jamaica1;
 }
 
 .social__pic {
@@ -193,14 +192,21 @@ $c-jamaica2: #95c762;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: $c-jamaica2;
+  padding: 2rem;
+}
+
+.ad__pic {
+  max-width: 20rem;
 }
 
 .ad__link {
   align-items: flex-end;
   color: $c-date;
   text-decoration: underline;
+}
 
+.sidebar {
+  max-width: 15rem;
 }
 
 .sidebar__heading {
@@ -212,9 +218,18 @@ $c-jamaica2: #95c762;
   color: $c-date;
 }
 
+.bottom {
+  border-top: 0.025rem $c-date solid;
+}
+
 .bottom__grid {
   display: flex;
   max-width: 100vh;
+}
+
+.bottom__header {
+  color: $c-nav;
+  font-size: 3rem;
 }
 
 .bottom__pic {
