--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -237,7 +237,12 @@ $c-jamaica2: #95c762;
   flex-grow: 1;
   max-width: 20rem;
   max-height: 20rem;
+}
 
+.bottom__writing {
+  color: $c-nav;
+  font-size: 2rem;
+  text-transform: uppercase;
 
 }
 
