--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,247 +13,6 @@ $c-jamaica2: #95c762;
 
 @import 'box-sizing';
 @import 'reset';
-
-.hero {
-  padding: 2rem;
-}
-
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.hero-pic {
-  background: url('/images/waves.jpg');
-  background-repeat: no-repeat;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
-.logo-pic {
-  max-width: 3rem;
-}
-
-.name {
-  justify-content: center;
-  padding: 1rem;
-}
-
-.nav__left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: $c-nav;
-}
-
-.nav__right {
-  justify-content: center;
-}
-
-.navbar__list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.list-item {
-  display: flex;
-  margin: 1rem;
-  color: $c-nav;
-  text-decoration: none;
-}
-
-.title {
-  min-height: 40vh;
-  padding: 4rem;
-  text-align: center;
-}
-
-.title__top {
-  color: $c-white;
-  font-size: 4rem;
-  text-transform: (50%);
-}
-
-.title__bottom {
-  color: $c-nav;
-}
-
-.container {
-  padding: 2rem;
-}
-
-.grid {
-  display: flex;
-  padding: 3rem;
-}
-
-.grid__left {
-  flex-grow: 1.5;
-  padding: 1rem;
-  // border: 0.5rem $c-banner solid;//
-}
-
-.headline__title {
-  color: $c-nav;
-  font-size: 3rem;
-  text-transform: uppercase;
-}
-
-.headline__pic {
-  max-width: 1rem;
-  border-radius: 50%;
-}
-
-.headline__name {
-  color: $c-link;
-}
-
-.headline__on {
-  color: $c-date;
-}
-
-.headline__date {
-  color: $c-date;
-  text-decoration: underline;
-}
-
-.lorem__indent {
-  padding: 1rem;
-}
-
-.lorem__pipe {
-  font-size: 20px;
-}
-
-.lorem__quote {
-  color: $c-nav;
-  text-transform: uppercase;
-}
-
-.lorem__links {
-  display: flex;
-  align-items: center;
-}
-
-.lorem__links--comments {
-  margin: 0.5rem;
-  background: $c-date;
-  color: $c-white;
-}
-
-.lorem__links--later {
-  margin: 0.5rem;
-  background: $c-date;
-  color: $c-white;
-}
-
-.lorem__links--share {
-  margin: 0.5rem;
-  background: $c-nav;
-  color: $c-white;
-}
-
-.grid__right {
-  flex-grow: 1;
-  padding: 1rem;
-  //  border: 0.5rem $c-banner solid;//
-}
-
-.social {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.social__pic {
-  max-width: 4rem;
-  margin: 0.5rem;
-  border-radius: 50%;
-
-}
-
-.social__name {
-  color: $c-nav;
-}
-
-.social__links {
-  color: $c-date;
-}
-
-.ad {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-}
-
-.ad__pic {
-  max-height: 20rem;
-}
-
-.ad__link {
-  align-items: flex-end;
-  color: $c-date;
-  text-decoration: underline;
-}
-
-.sidebar {
-
-}
-
-.sidebar__heading {
-  color: $c-nav;
-  text-transform: uppercase;
-}
-
-.sidebar__lorem {
-  color: $c-date;
-}
-
-.bottom {
-  border-top: 0.025rem $c-date solid;
-}
-
-.bottom__grid {
-  display: flex;
-  max-width: 100vh;
-}
-
-.bottom__header {
-  color: $c-nav;
-  font-size: 3rem;
-}
-
-.bottom__pic {
-  flex-basis: calc(100% / 4);
-  flex-grow: 1;
-  max-width: 20rem;
-  max-height: 20rem;
-}
-
-.bottom__writing {
-  color: $c-nav;
-  font-size: 2rem;
-  text-transform: uppercase;
-
-}
-
-.bottom__footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  background: $c-nav;
-  color: $c-date;
-}
-
-.bottom__footer--copyright {
-
-}
+@import 'navbar';
+@import 'main';
+@import 'bottom';
