--- a/app/styles/_bottom.scss
+++ b/app/styles/_bottom.scss
@@ -1,50 +1,49 @@
 .bottom {
   border-top: 0.025rem $c-date solid;
 
-}
+  &__grid {
+    display: flex;
+  }
 
-.bottom__grid {
-  display: flex;
-}
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    color: $c-nav;
+    font-size: 3rem;
+    text-transform: uppercase;
+  }
 
-.bottom__header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem;
-  color: $c-nav;
-  font-size: 3rem;
-}
+  &__square {
+    display: flex;
+    position: relative;
+  }
 
-.bottom__square {
-  display: flex;
-  position: relative;
+  &__pic {
+    position: relative;
+    flex-basis: calc(100% / 4 - 4rem);
+    flex-grow: 1;
+    max-width: 20rem;
+    max-height: 20rem;
+  }
 
-}
+  &__writing {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding: 0.5rem;
+    color: $c-nav;
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
 
-.bottom__pic {
-  position: relative;
-  flex-basis: calc(100% / 4 - 4rem);
-  flex-grow: 1;
-  max-width: 20rem;
-  max-height: 20rem;
-}
+  &__footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    background: $c-nav;
+    color: $c-date;
+  }
 
-.bottom__writing {
-  position: absolute;
-  bottom: 0;
-  margin: 0;
-  padding: 0.5rem;
-  color: $c-nav;
-  font-size: 2rem;
-  text-transform: uppercase;
-}
-
-
-.bottom__footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  background: $c-nav;
-  color: $c-date;
 }
