--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -5,12 +5,13 @@
 .grid {
   display: flex;
   padding: 3rem;
+
+  &__left {
+    flex-grow: 1;
+    padding: 1rem;
+  }
 }
 
-.grid__left {
-  flex-grow: 1;
-  padding: 1rem;
-}
 
 .headline__title {
   color: $c-nav;
@@ -51,7 +52,7 @@
 
 .lorem__links {
   display: flex;
-  align-items: center;
+  text-align: center;
 }
 
 .lorem__links--comments {
@@ -74,8 +75,8 @@
 
 .grid__right {
   flex-basis: auto;
-  padding: 1rem;
-  //  border: 0.5rem $c-banner solid;//
+  min-width: 25rem;
+  padding: 3rem;
 }
 
 .social {
@@ -83,21 +84,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  &__pic {
+    max-width: 4rem;
+    margin: 0.5rem;
+    border-radius: 50%;
+  }
+
+  &__name {
+    color: $c-nav;
+  }
+
+  &__link {
+    color: $c-date;
+  }
 }
 
-.social__pic {
-  max-width: 4rem;
-  margin: 0.5rem;
-  border-radius: 50%;
-}
-
-.social__name {
-  color: $c-nav;
-}
-
-.social__links {
-  color: $c-date;
-}
 
 .ad {
   display: flex;
@@ -105,20 +107,25 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
+
+  &__pic {
+    min-width: 15rem;
+    max-height: 20rem;
+  }
+
+  &__link {
+    align-items: flex-end;
+    color: $c-date;
+    text-align: right;
+    text-decoration: underline;
+  }
 }
 
-.ad__pic {
-  max-height: 20rem;
-}
 
-.ad__link {
-  align-items: flex-end;
-  color: $c-date;
-  text-decoration: underline;
-}
 
 .sidebar__heading {
   color: $c-nav;
+  text-align: center;
   text-transform: uppercase;
 }
 
