--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,7 +4,7 @@
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 // @import 'font-awesome';
 $c-banner: #2fa7b8;
-$c-nav: #103d88;
+$c-nav: #13348b;
 $c-white: #fff;
 $c-link: #1c6da1;
 $c-date: #95a8ab;
