--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -1,14 +1,23 @@
+.section {
+  padding: 2rem 1rem;
+}
+
 .container {
-  padding: 2rem;
+  max-width: 60rem;
+  margin: auto;
 }
 
 .grid {
   display: flex;
-  padding: 3rem;
+  margin: -1rem;
+
+  &__right {
+    margin: 1rem;
+  }
 
   &__left {
     flex-grow: 1;
-    padding: 1rem;
+    margin: 1rem;
   }
 }
 
@@ -73,12 +82,6 @@
   color: $c-white;
 }
 
-.grid__right {
-  flex-basis: auto;
-  min-width: 25rem;
-  padding: 3rem;
-}
-
 .social {
   display: flex;
   flex-direction: column;
@@ -95,7 +98,8 @@
     color: $c-nav;
   }
 
-  &__link {
+  &__links {
+    margin: 1rem;
     color: $c-date;
   }
 }
