--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,8 @@ $c-link: #1c6da1;
 $c-date: #95a8ab;
 $c-jamaica1: #cc9037;
 $c-jamaica2: #95c762;
+$c-border1: #8b8f90;
+$c-border2: #0d265d;
 
 @import 'box-sizing';
 @import 'reset';
