--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,7 @@ $c-jamaica1: #cc9037;
 $c-jamaica2: #95c762;
 $c-border1: #8b8f90;
 $c-border2: #0d265d;
+$c-darkgray: #636465;
 
 @import 'box-sizing';
 @import 'reset';
