fixed the line under the pictures at the bottom

--- a/app/styles/_bottom.scss
+++ b/app/styles/_bottom.scss
@@ -16,9 +16,9 @@
   }
 
   &__square {
+    display: flex;
     position: relative;
     flex-basis: 25%;
-    display: block;
   }
 
   &__writing {
