--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -1,10 +1,10 @@
 .section {
-  padding: 2rem 1rem;
+  padding: 1rem 0;
 }
 
 .container {
-  padding: 0 5rem;
-  margin: auto;
+  max-width: 65rem;
+  margin: 0 auto;
 }
 
 .grid {
@@ -18,7 +18,6 @@
   &__left {
     flex-grow: 1;
     margin: 2rem;
-
   }
 }
 
@@ -164,10 +163,10 @@
 }
 
 .sidebar {
-  max-width: 15rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 15rem;
   margin: 0 auto;
 
   &__heading {
